<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="16dp"
              android:orientation="vertical">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder_ad_soyad_label"/>

    <EditText
        android:id="@+id/reminder_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reminder_title_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder_details_label"/>

    <Button
        android:id="@+id/reminder_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/textViewID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reminder_title_id"/>

    <EditText
        android:id="@+id/textViewAdres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reminder_title_adres"/>

    <TextView
        android:id="@+id/textViewCinsiyet"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:text="Cinsiyet :" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_kız"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:text="@string/button_kız" />

        <RadioButton
            android:id="@+id/radio_erkek"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/button_erkek" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="DELETE" />

</LinearLayout>